--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="/items">Items <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="https://github.com/lkriffell">My GitHub <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="/merchants">Merchants <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="https://github.com/lkriffell/rails_engine/">Backend Repo <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="/admin">Admin<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="https://github.com/lkriffell/rails_driver">Frontend Repo<span class="sr-only">(current)</span></a>
       </li>
     </ul>
   </div>
