--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -21,7 +21,7 @@ tr:nth-child(even) {
   background-color: #A9C2CD;
 }
 </style>
-<br><h2>Note: When using the 'Try Me!' button, you may have to resend the url if the page cannot be found</h2><br>
+<br><h2>Note: When using the 'Try Me!' button, you may have to resend the url if the page cannot be found or if data is showing as null</h2><br>
 <br><h3>CRUD Endpoints: Items</h3><br>
 <table>
   <tr>
